test: JPA Testing